# Lipwa-trust

./: API.md  BACKEND_ANALYSIS.md  FLOW.md  README.md  WORK.md
backend/: .dockerignore  .env  .env.example  .gitignore  Dockerfile  dependencies.py  http.py  lipwa_trust.db  lipwa_trust.sqlite3  main.py  requirements.txt  seeder.py  trust_score_engine.py
backend/core/: blockchain.py  config.py  security.py
backend/crud/: contract.py  merchant.py  repayment.py  supplier.py  user.py
backend/db/: base.py  session.py
backend/models/: contract.py  merchant.py  repayment.py  supplier.py  user.py
backend/services/: __init__.py  blockchain_service.py
blockchain/: .gitignore  PLAN.md  README.md
blockchain/contracts/inventory_credit/: Cargo.toml
blockchain/contracts/inventory_credit/src/: lib.rs  test.rs
blockchain/oracle/: .env.example  package-lock.json  package.json
blockchain/oracle/postman/: lipwa-trust-oracle.postman_collection.json  lipwa-trust-oracle.postman_environment.json
blockchain/oracle/src/: config.ts  index.ts
frontend/: package.json
frontend/new/: supplier_endpoints.py
frontend/src/: App.jsx  index.css  test.js
frontend/src/api/: api.js
frontend/src/components/: Card.css  Card.jsx  Navbar.css  Navbar.jsx  ProgressBar.css  ProgressBar.jsx  ProtectedRoute.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: AdminDashboard.jsx  Auth.css  Dashboard.css  Landing.css  Landing.jsx  Login.jsx  MerchantDashboard.css  MerchantDashboard.jsx  Onboarding.jsx  Register.jsx  SupplierDashboard.css  SupplierDashboard.jsx
(+10 files in other folders)
