[package]
name = "inventory_credit"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "20.4.0"

[dev-dependencies]
soroban-sdk = { version = "20.4.0", features = ["testutils"] }
arbitrary = "=1.3.2"
derive_arbitrary = "=1.3.2"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[features]
default = []
testutils = []
